changed height for small screens

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <h6 class="font-weight-bold ">NEED HELP ?</h6>
                 <h1 class="mb-5">SAFEFORIA <span class="font-weight-bold">CONSULTING BOARD</span></h1>
                 <p class="w-75 m-auto">We are one of the world's leading management consulting firms, where bold thinking, inspired people and a passion for results come together for extraordinary impact.</p>
-                <p class="w-75 m-auto">We have qualified a team ready to answer any questions you may have.</p>
+                <p class="w-75 m-auto">We have a qualified team ready to answer any questions you may have.</p>
 
             </div>
 <!--            End Consultant-->
