--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <body>
         <!--  Navbar    -->
   <header class=" container-fluid ">
-      <nav class=" navbar navbar-light navbar-expand-md    p-4">
+      <nav class=" navbar navbar-light navbar-expand-lg    p-4">
           <a class="navbar-brand mt-2 text-dark" href="index.html"><img  class="img-fluid logo" src="static/images/safeforialogo.jpeg" > </a>
           <button class="navbar-toggler" data-target="#data" data-toggle="collapse" type="button"> <span class="navbar-toggler-icon "></span> </button>
           <div class="collapse text-dark navbar-collapse" id="data">
@@ -31,14 +31,14 @@
                     <a class="nav-link link pl-3 pr-3" href="index.html">Home</a> 
                  </li>
                     <li class="nav-item"> 
-                    <a class="nav-link  link pl-3 pr-3"    href="#">About Us</a> 
+                    <a class="nav-link  link pl-3 pr-3"    href="index.html#aboutus">About Us</a> 
                 </li> 
                     <li class="nav-item"> 
                     <a class="nav-link link pl-3 pr-3" href="#">Services</a> 
                 </li>
                     
                  <li class="nav-item"> 
-                    <a class="nav-link link pl-3 pr-3" href="#">Gallery</a> 
+                    <a class="nav-link link pl-3 pr-3" href="gallery.html">Gallery</a> 
                 </li>
                     <li class="nav-item"> 
                     <a class="nav-link link pl-3 pr-3"     href="blogs.html">Blog</a> 
@@ -81,27 +81,26 @@
                 </div>
             <article class="row m-0">
 <!--                Address info-->
-                <div class="col-md gcolor p-5 text-white">
-                  <div class="mt-5 p-5 location"> 
+                <div class="col-md gcolor p-4 text-white">
+                  <div class="mt-5 location"> 
                   <h6><strong>CONTACTS</strong></h6>
                     <p class="mmt" >
                            <span href='#' class=" bg-light secolor">
                                <i class="fa fa-location-arrow  m-1" aria-hidden="true"></i>
                            </span>
-                        4518 Spirit Drive, Deland, Florida, US, 32720
+                         GA-123-432-23 East-Legon, Accra
                        </p>
                     <p class="mmt" >
                            <span  class="secolor bg-light ">
                                <i class="fa fa-envelope  m-1" aria-hidden="true"></i>
                            </span>
-                        email@example.com
+                        info@safeforia.com
                     </p>
                     <p class="mmt" >
                            <span href='#' class=" secolor bg-light ">
                                <i class="fa fa-phone  m-1 " aria-hidden="true"></i>
                            </span>
-                        Phone 732-123-4567 | 
-                        Fax 732-123-4567
+                        Phone 054-123-4567 | 054-123-4567
                     </p>
             </div>
                 </div>
@@ -114,7 +113,7 @@
                        <div class=" m-auto">
                             <h6 class="font-weight-bold text-secondary mt-5">SEND MESSAGE</h6>
                             <h1>DROP <span class="font-weight-bold">US A LINE</span></h1>
-                            <form  class="display container sub-input">
+                            <form  class="container sub-input">
                                 <div class="row">
                                     <input type="text" placeholder="Name" class="col-md m-1 form-control bg-white border-0 rounded p-3 ">
                                     <input type="text" placeholder="Email" class="col-md m-1 form-control bg-white border-0 rounded p-3 ">
@@ -207,20 +206,19 @@
                            <span href='#' class=" location-links">
                                <i class="fa fa-location-arrow  m-1" aria-hidden="true"></i>
                            </span>
-                        4518 Spirit Drive, Deland, Florida, US, 32720
+                        GA-123-432-23 East-Legon, Accra
                        </p>
                     <p class="mmt" >
                            <span  class=" location-links">
                                <i class="fa fa-envelope  m-1" aria-hidden="true"></i>
                            </span>
-                        email@example.com
+                        info@safeforia.com
                     </p>
                     <p class="mmt" >
                            <span href='#' class=" location-links">
                                <i class="fa fa-phone  m-1 " aria-hidden="true"></i>
                            </span>
-                        Phone 732-123-4567 | 
-                        Fax 732-123-4567
+                        Phone 054-123-4567 | 054-123-4567
                     </p>
             </div>
           </div>
