--- a/text.html
+++ b/text.html
@@ -22,7 +22,7 @@
     <body>
         <!--  Navbar    -->
   <header class=" container-fluid ">
-      <nav class=" navbar navbar-light navbar-expand-md    p-4">
+      <nav class=" navbar navbar-light navbar-expand-lg    p-4">
           <a class="navbar-brand mt-2 text-dark" href="index.html"><img  class="img-fluid logo" src="static/images/safeforialogo.jpeg" > </a>
           <button class="navbar-toggler" data-target="#data" data-toggle="collapse" type="button"> <span class="navbar-toggler-icon "></span> </button>
           <div class="collapse text-dark navbar-collapse" id="data">
@@ -31,14 +31,14 @@
                     <a class="nav-link link pl-3 pr-3" href="index.html">Home</a> 
                  </li>
                     <li class="nav-item"> 
-                    <a class="nav-link  link pl-3 pr-3"    href="#">About Us</a> 
+                    <a class="nav-link  link pl-3 pr-3"    href="index.html#aboutus">About Us</a> 
                 </li> 
                     <li class="nav-item"> 
                     <a class="nav-link link pl-3 pr-3" href="#">Services</a> 
                 </li>
                     
                  <li class="nav-item"> 
-                    <a class="nav-link link pl-3 pr-3" href="#">Gallery</a> 
+                    <a class="nav-link link pl-3 pr-3" href="gallery.html">Gallery</a> 
                 </li>
                     <li class="nav-item"> 
                     <a class="nav-link link-active link pl-3 pr-3"     href="blogs.html">Blog</a> 
@@ -149,20 +149,19 @@
                            <span href='#' class=" location-links">
                                <i class="fa fa-location-arrow  m-1" aria-hidden="true"></i>
                            </span>
-                        4518 Spirit Drive, Deland, Florida, US, 32720
+                       GA-123-432-23 East-Legon, Accra
                        </p>
                     <p class="mmt" >
                            <span  class=" location-links">
                                <i class="fa fa-envelope  m-1" aria-hidden="true"></i>
                            </span>
-                        email@example.com
+                        info@safeforia.com
                     </p>
                     <p class="mmt" >
                            <span href='#' class=" location-links">
                                <i class="fa fa-phone  m-1 " aria-hidden="true"></i>
                            </span>
-                        Phone 732-123-4567 | 
-                        Fax 732-123-4567
+                        Phone 054-123-4567 | 054-123-4567
                     </p>
             </div>
           </div>
