added the service pages

--- a/gallery.html
+++ b/gallery.html
@@ -33,8 +33,15 @@
                     <li class="nav-item"> 
                     <a class="nav-link  link pl-3 pr-3"    href="index.html#aboutus">About Us</a> 
                 </li> 
-                    <li class="nav-item"> 
-                    <a class="nav-link link pl-3 pr-3" href="#">Services</a> 
+                   <li class="nav-item dropdown"> 
+                    <a class="nav-link link-active link pl-3 pr-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a> 
+                        <div class="dropdown-menu border" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item link link-active" href="foodtest.html">Food Test</a>
+                          <a class="dropdown-item  link" href="quality.html">Quality Control </a>
+                          <a class="dropdown-item link" href="research.html">Research</a>
+                          <a class="dropdown-item link" href="consultant.html">Consultancy</a>
+                          <a class="dropdown-item link" href="knowledge-career.html">Knowledge Hub & Career</a>
+                        </div>
                 </li>
                     
                  <li class="nav-item"> 
@@ -217,7 +224,7 @@
                            <span href='#' class=" location-links">
                                <i class="fa fa-phone  m-1 " aria-hidden="true"></i>
                            </span>
-                        Phone 054-123-4567 | 054-123-4567
+                        Phone 027 271 5759 | 027 271 5759
                     </p>
             </div>
           </div>
