--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
                     <li class="nav-item"> 
                     <a class="nav-link  link pl-3 pr-3"    href="#aboutus">About Us</a> 
                 </li> 
-                    <li class="nav-item"> 
-                    <a class="nav-link link pl-3 pr-3" href="#">Services</a> 
+                    <li class="nav-item dropdown"> 
+                    <a class="nav-link link-active link pl-3 pr-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a> 
+                        <div class="dropdown-menu border" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item link link-active" href="foodtest.html">Food Test</a>
+                          <a class="dropdown-item  link" href="quality.html">Quality Control </a>
+                          <a class="dropdown-item link" href="research.html">Research</a>
+                          <a class="dropdown-item link" href="consultant.html">Consultancy</a>
+                          <a class="dropdown-item link" href="knowledge-career.html">Knowledge Hub & Career</a>
+                        </div>
                 </li>
                     
                  <li class="nav-item"> 
@@ -129,7 +136,7 @@
                 <div class="intro p-4">
                     <h1 class="mb-5"><span class="font-weight-bold">INTRODUCTION</span></h1>
                     <p>Safeforia comprises a team of seasoned experts in food quality and food safety management. We draw on our rich and diverse expertise, and research, regulatory compliance and business development skills to bring you the best service at affordable prices.</p>
-                    <a href="#" class="btn border border-dark text-dark">KNOW MORE</a>
+                    <a href="#aboutus" class="btn border border-dark text-dark">KNOW MORE</a>
                 </div>
             </div>
             <div class="col-md-6 m-auto">
@@ -210,7 +217,7 @@
                         </p>
                          
                         <h6 class="font-weight-bold  ">CALL US NOW</h6>
-                        <h1 class="mb-1"> <span class="font-weight-bold">054 778 5025</span></h1>
+                        <h1 class="mb-1"> <span class="font-weight-bold">027 271 5759</span></h1>
                         <h6 class="font-weight-bold ">OR REQUEST A CALL</h6>
                         <form  class="display container sub-input">
                         <div class="row">
@@ -461,7 +468,7 @@
                            <span href='#' class=" location-links">
                                <i class="fa fa-phone  m-1 " aria-hidden="true"></i>
                            </span>
-                        Phone 054-123-4567 | 054-123-4567
+                        Phone 027 271 5759 | 027 271 5759
                     </p>
             </div>
           </div>
