--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link  link pl-3 pr-3"    href="#aboutus">About Us</a> 
                 </li> 
                     <li class="nav-item dropdown"> 
-                    <a class="nav-link link-active link pl-3 pr-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a> 
+                    <a class="nav-link link pl-3 pr-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a> 
                         <div class="dropdown-menu border" aria-labelledby="navbarDropdownMenuLink">
                           <a class="dropdown-item link link-active" href="foodtest.html">Food Test</a>
                           <a class="dropdown-item  link" href="quality.html">Quality Control </a>
