--- a/index.html
+++ b/index.html
@@ -437,10 +437,12 @@
                <div class="col-md-2 mt-5 m-3 f-links">
                           
                             <h6><strong>LINKS</strong></h6>
-                            <p class="mt-4"><a href="#">Home</a></p>
-                            <p class="mt-4"><a href="#">About us</a></p>
-                            <p class="mt-4"><a href="#">Services</a></p>
-                            <p class="mt-4"><a href="#">more</a></p> 
+                            <p class="mt-4"><a href="index.html">Home</a></p>
+                            <p class="mt-4"><a href="index.html#aboutus">About us</a></p>
+                            <p class="mt-4"><a href="foodtest.html">Services</a></p>
+                            <p class="mt-4"><a href="gallery.html">Gallery</a></p> 
+                            <p class="mt-4"><a href="blogs.html">Blog</a></p> 
+                            <p class="mt-4"><a href="contact.html">Contact us</a></p> 
                 </div>
               
             <div class="col-md-3 ml-3 mt-5">
