--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-md-6 m-auto">
                 <div class="row ">
                     <div class="col-md bg-primary m-3 item"><h2><strong>4</strong></h2>
-                    <h3>Accredited Analytical Methods</h3></div>
+                    <h3>Accredited Analytical Methods </h3></div>
                     <div class="col-md bg-success m-3 item"><h2><strong>7</strong></h2>
                     <h3>Scientists</h3></div>
                 </div>
@@ -161,11 +161,11 @@
         <section class=" m-0">        
             <div class="mt-5 container-fluid">
             <section class="row text-white">
-                <div class="col-md-3 bg-secondary p-5 ">
+                <div class="col-md-3 bg-primary p-5 ">
                     <h1 class="mb-5">FOOD <span class="font-weight-bold">TEST</span></h1>
                     <p>We have a wide range of areas into food safety we constantly research and monitor</p>
                 </div>
-                <div class="col-md-3 text-dark p-5">
+                <div class="col-md-3 bg-warning p-5">
                     <h1 class="mb-5">KNOWLEDGE <span class="font-weight-bold">HUB</span></h1>
                     <p>We have a wide range of areas into food safety we constantly research and monitor</p>
                 </div>
