--- a/index.html
+++ b/index.html
@@ -163,19 +163,19 @@
             <section class="row text-white">
                 <div class="col-md-3 bg-primary p-5 ">
                     <h1 class="mb-5">FOOD <span class="font-weight-bold">TEST</span></h1>
-                    <p>We have a wide range of areas into food safety we constantly research and monitor</p>
+                    <p class="font-weight-bold">We have a wide range of areas into food safety we constantly research and monitor</p>
                 </div>
                 <div class="col-md-3 bg-warning p-5">
                     <h1 class="mb-5">KNOWLEDGE <span class="font-weight-bold">HUB</span></h1>
-                    <p>We have a wide range of areas into food safety we constantly research and monitor</p>
+                    <p class="font-weight-bold">We have a wide range of areas into food safety we constantly research and monitor</p>
                 </div>
-                <div class="col-md-3 bg-about p-5">
+                <div class="col-md-3 bg-blue p-5">
                     <h1 class="mb-5">OUR <span class="font-weight-bold">RESEARCH</span></h1>
-                    <p>We have a wide range of areas into food safety we constantly research and monitor</p>
+                    <p class="font-weight-bold">We have a wide range of areas into food safety we constantly research and monitor</p>
                 </div>
                 <div class="col-md-3 bg-dark p-5">
                     <h1 class="mb-5">QUALITY <span class="font-weight-bold">CONTROL</span></h1>
-                    <p>We have a wide range of areas into food safety we constantly research and monitor</p>
+                    <p class="font-weight-bold">We have a wide range of areas into food safety we constantly research and monitor</p>
                 </div>
             </section>
             </div>
