--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <div class="row container m-auto">
                     <div class="col-md-4 members p-3 m-3 ">
                         <h3 class="mb-2">Dr.Nicole Sharon<span class="font-weight-bold d-block">AFFRIFAH</span></h3>
-                        <h5>Consultant: Regulatory Affairs And Factory Design</h5>
+                        <h5>Regulatory Affairs And Factory Design</h5>
                     </div>
                     <div class="col-md-4">
                         <img class="mem-img" src="static/images/NSAffrifah_picture.jpg">
