--- a/foodtest.html
+++ b/foodtest.html
@@ -105,7 +105,7 @@
                             
                         </div>
                         <div class="card-footer font-weight-bold">
-                            <i>At Safeforia, our food tests have a <span class="t-color">quick turn-around time</span>, Our tests are <span class="t-color">cost effective</span> and We have <span class="s-color">documented ISO 17025 system to ensure accuracy, objectivity and confidentiality</span>.</i>
+                            <i>At Safeforia, our food tests have a <span class="s-color">quick turn-around time</span>, Our tests are <span class="s-color">cost effective</span> and We have <span class="s-color">documented ISO 17025 system to ensure accuracy, objectivity and confidentiality</span>.</i>
                         </div>
                     </div>
                     
