--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="col-md mt-4 mb-5">
                     <div class="row container m-auto">
                     <div class="col-md-4 members p-3 m-3 ">
-                        <h3 class="mb-2">Angela Parry-Hanson<span class="font-weight-bold d-block">KUNADU(PHD)</span></h3>
+                        <h3 class="mb-2">Dr. Angela Parry-Hanson<span class="font-weight-bold d-block">KUNADU</span></h3>
                         <h5>CEO & Lead Consultant</h5>
                     </div>
                     <div class="col-md-4">
