--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             </div>
             <div class="col-md-6 m-auto">
                 <div class="row ">
-                    <div class="col-md bg-primary m-3 item"><h2><strong>ISO 17025</strong></h2>
-                    <h3>Documented System</h3></div>
+                    <div class="col-md bg-primary m-3 item"><h2><strong>ISO/IEC</strong></h2>
+                    <h3>17025:2017 Documented System</h3></div>
                     <div class="col-md bg-success m-3 item"><h2><strong>7</strong></h2>
                     <h3>Scientists</h3></div>
                 </div>
