--- a/single.html
+++ b/single.html
@@ -31,7 +31,7 @@
                     <a class="nav-link link pl-3 pr-3" href="index.html">Home</a> 
                  </li>
                     <li class="nav-item"> 
-                    <a class="nav-link  link pl-3 pr-3"    href="index.html#aboutus">About Us</a> 
+                    <a class="nav-link  link pl-3 pr-3"    href="about.html">About Us</a> 
                 </li> 
                    <li class="nav-item dropdown"> 
                     <a class="nav-link link-active link pl-3 pr-3 dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a> 
@@ -172,7 +172,7 @@
                           
                             <h6><strong>LINKS</strong></h6>
                            <p class="mt-4"><a href="index.html">Home</a></p>
-                            <p class="mt-4"><a href="index.html#aboutus">About us</a></p>
+                            <p class="mt-4"><a href="about.html">About us</a></p>
                             <p class="mt-4"><a href="foodtest.html">Services</a></p>
                             <p class="mt-4"><a href="gallery.html">Gallery</a></p> 
                             <p class="mt-4"><a href="blogs.html">Blog</a></p> 
