--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
                 
                 <p class="text-justify">At Safeforia, we understand the nature of food and beverage businesses from farm to plate. This knowledge is based on deep science and rich industry experience. We bring you complete, focussed, sustainable and cost-effective solutions to all your food quality and food safety needs.</p>
              <p class="text-justify">Safeforia is strongly committed to good business ethics. We connect our cherished clients with the correct information, targeted services and the right experts to help you produce, manufacture and prepare foods that are safe, compliant and of excellent quality.</p>
-             <p class="text-justify">Choose Safeforia as you’re your food safety partner to build food safety capacity of your employees and assist you with our diverse range of services that comes conveniently packaged to meet your company needs.</p>
+             <p class="text-justify">Choose Safeforia as we’re your food safety partner to build food safety capacity of your employees and assist you with our diverse range of services that comes conveniently packaged to meet your company needs.</p>
  
                     <div class=" intro p-3 m-2">
                         <h2 class="mb-5">OUR <span class="font-weight-bold">VISION </span></h2>
