--- a/index.html
+++ b/index.html
@@ -82,9 +82,19 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                       </ol>
                     <div class="carousel-inner">
-                      <div class="carousel-item active" data-interval="5000">
+                     <div class="carousel-item active" data-interval="5000">
+                        <img src="static/images/cover_research.png" class="d-block car-img" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+<!--
+                            <h5>First slide label</h5> 
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+-->
+                          </div>
+                      </div> 
+                     <div class="carousel-item " data-interval="5000">
                         <img src="static/images/food-test.jpg" class="d-block car-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
 <!--
