--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         
 <!--        Main content-->
         <section class=" m-0">        
-            <div class="mt-5  bg-dark  p-5">
-              <section class="row container m-auto">
+            <div class="mt-5  bg-dark container-fluid  p-5">
+              <section class="row   m-auto">
                   <div class="col-md-3 border pt-5 pl-4 bg-white ">
                       <h2 class="mb-5 pb-3">FOOD <span class="font-weight-bold t-color">TEST</span></h2>
                       <p class="font-weight-bold pt-4">Our fast and reliable testing services will help secure supply chains, ensure safety of fished products and support regulatory compliance.</p>
@@ -180,11 +180,11 @@
                       <p class="font-weight-bold">We provide bespoke training to build food safety capacity of your employees.</p>
                   </div>
                   <div class="col-md-3 pt-5 pl-4 bg-white border">
-                      <h2 class="mb-5">OUR <span class="font-weight-bold t-color">RESEARCH</span></h2>
-                      <p class="font-weight-bold">We will help you find the right answers to your questions using targeted-scientific research.</p>
+                      <h2 class="mb-5 pb-3">OUR <span class="font-weight-bold t-color ">RESEARCH</span></h2>
+                      <p class="font-weight-bold pt-4">We will help you find the right answers to your questions using targeted-scientific research.</p>
                   </div>
                   <div class="col-md-3 border bg-white pt-5 pl-4">
-                      <h2 class="mb-5">QUALITY <span class="font-weight-bold t-color">CONTROL</span></h2>
+                      <h2 class="mb-5 ">QUALITY <span class="font-weight-bold t-color">CONTROL</span></h2>
                       <p class="font-weight-bold">We have well trained and resourced staff who will help you produce, process and prepare your foods within specifications.</p>
                   </div>
               </section>
