--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       </ol>
                     <div class="carousel-inner">
                      <div class="carousel-item active" data-interval="5000">
-                        <img src="static/images/cover_research.png" class="d-block car-img" alt="...">
+                        <img src="static/images/covers/Food%20test%20new.png" class="d-block car-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
 <!--
                             <h5>First slide label</h5> 
@@ -95,7 +95,7 @@
                           </div>
                       </div> 
                      <div class="carousel-item " data-interval="5000">
-                        <img src="static/images/food-test.jpg" class="d-block car-img" alt="...">
+                        <img src="static/images/covers/Consulting%20new.png" class="d-block car-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
 <!--
                             <h5>First slide label</h5> 
@@ -104,7 +104,7 @@
                           </div>
                       </div>
                       <div class="carousel-item" data-interval="5000">
-                        <img src="static/images/consulting.jpg" class="d-block car-img" alt="...">
+                        <img src="static/images/covers/test%20new.png" class="d-block car-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
 <!--
                             <h5>Second slide label</h5>
@@ -113,7 +113,7 @@
                           </div>
                       </div>
                       <div class="carousel-item" data-interval="5000">
-                        <img src="static/images/IMG_5897-scaled.jpg" class="d-block  car-img" alt="...">
+                        <img src="static/images/covers/KNOWLEDGE%20HUB.png" class="d-block  car-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
 <!--
                             <h5>Third slide label</h5>
