--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                       </ol>
                     <div class="carousel-inner">
                      <div class="carousel-item active" data-interval="5000">
@@ -113,7 +114,16 @@
                           </div>
                       </div>
                       <div class="carousel-item" data-interval="5000">
-                        <img src="static/images/covers/KNOWLEDGE%20HUB.png" class="d-block  car-img" alt="...">
+                        <img src="static/images/covers/Knowledge%20hub%20banner%20update.png" class="d-block  car-img" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+<!--
+                            <h5>Third slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+-->
+                          </div>
+                      </div>
+                     <div class="carousel-item" data-interval="5000">
+                        <img src="static/images/covers/clients.png" class="d-block  car-img" alt="...">
                         <div class="carousel-caption d-none d-md-block">
 <!--
                             <h5>Third slide label</h5>
@@ -229,7 +239,7 @@
                     </div>
                 
                     <div class="col-md-7 bg-dark p-0 ">
-                        <img style="width:100%; height:100%"  class="" src="static/images/1Q-scaled.jpg">
+                        <img style="width:100%; height:100%"  class="" src="static/images/covers/Knowledge%20hub%20in%20page%20banner.png">
                     </div>
                 </div>
             </section>
