--- a/research.html
+++ b/research.html
@@ -76,9 +76,9 @@
 <!--  End Navbar    --> 
         
         <section class="container-fluid p-0">
-            <div class='banner p-5 text-white'>
-                <h6 class="font-weight-bold"><a href="#" class="text-white">Home</a>  /<a href="#" class="text-white">Services</a> /<a href="#" class="text-white">Research</a> </h6>
-                <h1 class="font-weight-bold" >RESEARCH</h1>
+            <div class='banner r-image p-5 text-white'>
+                <h5 class="font-weight-bold"><a href="#" class="text-white">Home</a>  /<a href="#" class="text-white">Services</a> /<a href="#" class="text-white">Research</a> </h5>
+<!--                <h1 class="font-weight-bold" >RESEARCH</h1>-->
             </div>
         </section>
         
