--- a/knowledge-career.html
+++ b/knowledge-career.html
@@ -76,9 +76,9 @@
 <!--  End Navbar    --> 
         
         <section class="container-fluid p-0">
-            <div class='banner p-5 text-white'>
-                <h6 class="font-weight-bold"><a href="#" class="text-white">Home</a>  /<a href="#" class="text-white">Services</a> /<a href="#" class="text-white">Knowledge Hub & Career</a> </h6>
-                <h1 class="font-weight-bold" >KNOWLEDGE HUB & CAREER</h1>
+            <div class='banner k-image p-5 text-white'>
+                <h5 class="font-weight-bold"><a href="#" class="text-white">Home</a>  /<a href="#" class="text-white">Services</a> /<a href="#" class="text-white">Knowledge Hub<br> & Career</a> </h5>
+<!--                <h1 class="font-weight-bold" >KNOWLEDGE HUB & CAREER</h1>-->
             </div>
         </section>
         
