--- a/consultant.html
+++ b/consultant.html
@@ -76,7 +76,7 @@
 <!--  End Navbar    --> 
         
         <section class="container-fluid p-0">
-            <div class='banner p-5 text-white'>
+            <div class='banner c-image p-5 text-white'>
                 <h6 class="font-weight-bold"><a href="#" class="text-white">Home</a>  /<a href="#" class="text-white">Services</a> /<a href="#" class="text-white">Consultancy</a> </h6>
                 <h1 class="font-weight-bold" >CONSULTANCY</h1>
             </div>
