--- a/quality.html
+++ b/quality.html
@@ -76,10 +76,9 @@
 <!--  End Navbar    --> 
         
         <section class="container-fluid p-0">
-            <div class='banner p-5 text-white'>
+            <div class='banner q-image p-5 text-white'>
                 <h6 class="font-weight-bold"><a href="#" class="text-white">Home</a>  /<a href="#" class="text-white">Services</a> /<a href="#" class="text-white">Quality Control 
-Services</a> </h6>
-                <h1 class="font-weight-bold" >QUALITY CONTROL SERVICES</h1>
+Services</a> </h6> 
             </div>
         </section>
         
